--- a/src/dotnet/ReSharperPlugin.GitHighlighterReSharperPlugin.Tests/ReSharperPlugin.GitHighlighterReSharperPlugin.Tests.csproj
+++ b/src/dotnet/ReSharperPlugin.GitHighlighterReSharperPlugin.Tests/ReSharperPlugin.GitHighlighterReSharperPlugin.Tests.csproj
@@ -8,7 +8,6 @@
   <ItemGroup>
     <PackageReference Include="GitHubActionsTestLogger" Version="2.0.1" />
     <PackageReference Include="JetBrains.ReSharper.SDK.Tests" Version="$(SdkVersion)" />
-    <PackageReference Include="LibGit2Sharp" Version="0.30.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.4.1" />
     <PackageReference Include="NUnit3TestAdapter" Version="4.3.1" />
   </ItemGroup>
@@ -16,6 +15,15 @@
   <ItemGroup>
     <ProjectReference Include="..\ReSharperPlugin.GitHighlighterReSharperPlugin\ReSharperPlugin.GitHighlighterReSharperPlugin.csproj" />
   </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="LibGit2Sharp" Version="0.30.0" PrivateAssets="all"/>
+  </ItemGroup>
+
+  <PropertyGroup>
+    <ShadowCopyReferences>false</ShadowCopyReferences>
+  </PropertyGroup>
+
 
   <ItemGroup>
     <Compile Remove="test/**/*" />
