--- a/src/dotnet/ReSharperPlugin.GitHighlighterReSharperPlugin/ReSharperPlugin.GitHighlighterReSharperPlugin.Rider.csproj
+++ b/src/dotnet/ReSharperPlugin.GitHighlighterReSharperPlugin/ReSharperPlugin.GitHighlighterReSharperPlugin.Rider.csproj
@@ -10,7 +10,14 @@
 
   <ItemGroup>
     <PackageReference Include="JetBrains.Rider.SDK" Version="$(SdkVersion)" />
-    <PackageReference Include="LibGit2Sharp" Version="0.30.0" />
   </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="LibGit2Sharp" Version="0.30.0" PrivateAssets="all"/>
+  </ItemGroup>
+
+  <PropertyGroup>
+    <ShadowCopyReferences>false</ShadowCopyReferences>
+  </PropertyGroup>
 
 </Project>
