feat: Tried implementing FileSystemWatcher and IDaemon.Invalidate

--- a/src/dotnet/ReSharperPlugin.GitHighlighterReSharperPlugin.Tests/ReSharperPlugin.GitHighlighterReSharperPlugin.Tests.csproj
+++ b/src/dotnet/ReSharperPlugin.GitHighlighterReSharperPlugin.Tests/ReSharperPlugin.GitHighlighterReSharperPlugin.Tests.csproj
@@ -41,10 +41,9 @@
     <ShadowCopyReferences>false</ShadowCopyReferences>
   </PropertyGroup>
 
-
   <ItemGroup>
-    <Compile Remove="test/**/*" />
-    <None Include="test/**/*" />
+    <Compile Remove="test\**\*" />
+    <None Include="test\**\*" />
   </ItemGroup>
 
 </Project>
